--- a/profiles.yml
+++ b/profiles.yml
@@ -1,9 +1,13 @@
-duckdb:
+default:
   outputs:
     dev:
-      type: duckdb
-      path: "{{ env_var('JAFFLE_DB_PATH', './reports/jaffle_shop.duckdb') }}"
-      database: "{{ env_var('JAFFLE_DB_NAME', 'jaffle_shop') }}"
-      schema: "{{ env_var('JAFFLE_TARGET_SCHEMA', 'analytics') }}"
-      threads: 4
+      type: bigquery
+      method: service-account # for production runs: https://docs.getdbt.com/docs/profile-bigquery#section-service-account-file-authentication
+      project: "{{ env_var('PROJECT_ID', 'dbt-demo-386220') }}" # parameterize project for dbt runs based on environment variable with default project
+      dataset: dbt_bq_example # You can also use "schema" here
+      threads: 8 # https://docs.getdbt.com/docs/configure-your-profile#section-understanding-threads
+      keyfile: "{{ env_var('DBT_GOOGLE_BIGQUERY_KEYFILE', 'service_account.json') }}"
+      timeout_seconds: 300
+      location: US # Optional, one of US or EU
+      priority: interactive # interactive or batch
   target: dev
